<resources>
    <string name="app_name">Hawkeye Harvest Food Bank</string>
    <string name="account_number">Account Number</string>
    <string name="start">Start</string>
    <string name="textview">TextView</string>
    <string name="item_name">Item Name</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back">Back</string>
    <string name="please_enter_your_account_number">Please enter your account number:</string>
    <string name="place_order_now_question_mark">Place order now?</string>
    <string name="your_order_has_been_saved_successfully">Your order has been saved successfully.</string>
    <string name="do_you_want_to_place_your_order_now">Do you want to place your order now?</string>
    <string name="important_you_must_be_at_the_food_bank_to_pick_up_your_order_within_60_minutes_of_pressing_the_yes_button_please_be_sure_you_are_ready_with_transportation">IMPORTANT: You must be at the food bank to pick up your order within 60 minutes of pressing the Yes button. Please be sure you are ready with transportation.</string>
    <string name="pack_the_order_i_am_ready_to_pick_it_up_now">Pack the order. I am ready to pick it up NOW.</string>
    <string name="i_am_not_ready_save_the_order_but_do_not_pack_it_yet">I am not ready. Save the order but do not pack it yet.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="check_your_order_colon_mark">Check your order:</string>
    <string name="your_order_status_colon_mark">Your order status:</string>
    <string name="next_day_open">Next Day Open</string>
    <string name="suggested_date_for_next_order">Suggested date for next order:</string>
    <string name="family_size_colon_mark">Family Size:</string>
    <string name="sign_in_successful">Sign In Successful</string>
    <string name="account_id">Account ID:</string>
    <string name="date_of_last_order_colon_mark">Date of last order:</string>
    <string name="suggested_next_order_date">Suggested Next Order Date</string>
    <string name="accountid">AccountID</string>
    <string name="family_size">Family Size</string>
    <string name="last_order_date">Last Order Date</string>
    <string name="the_food_bank_is_open_and_can_take_orders_until_3_30_pm">The Food Bank is OPEN and can take orders until 3:30 PM</string>
    <string name="order_state">Order State</string>
    <string name="welcome_to_hawkeye_harvest">Welcome to Hawkeye Harvest!</string>
    <string name="startup_message_to_client">Startup Message to Client</string>
    <string name="next">Next</string>
    <string name="thank_you_for_packing_this_order_please_mark_the_order_now_with_this_order_number">Thank you for packing this order. Please mark the order NOW with this order number.</string>
    <string name="hit_confirm_to_finalize_this_order_or_the_phone_back_button_to_recheck">Hit CONFIRM to finalize this order, or the phone back button to recheck.</string>
    <string name="confirm">CONFIRM</string>
    <string name="order_number">ORDER NUMBER</string>
    <string name="prior_to_creating_a_new_item_please_check_inventory_list_your_item_may_be_there_already_if_so_just_mark_it_as_available">Prior to creating a new foodItem, please check inventory list: your foodItem may be there already. If so, just mark it as available.</string>
    <string name="your_order_was_received_but_not_packed_by_closing_time_or_some_other_error_has_occurred_something_has_gone_wrong_we_apologize_please_call_the_food_bank_between_1pm_and_3pm_weekdays_to_correct_the_problem">Your order was received but not packed by closing time, or some other error has occurred. Something has gone wrong: we apologize. Please call the food bank between 1PM and 3PM weekdays to correct the problem.</string>
    <string name="instructions_pick_your_food_from_the_list_use_the_plus_button_to_pick_the_food_use_the_minus_button_to_put_it_back_scroll_down_to_see_all_your_choices_when_you_are_done_shopping_push_the_shopping_cart_button_to_save">INSTRUCTIONS: pick your food from the list. Use the plus(+) button to pick the food. Use the minus (-) button to put it back. Scroll down to see all your choices. When you are done shopping, push the shopping cart button to save.</string>
    <string name="ready">Ready</string>
    <string name="volunteer_section">VOLUNTEER SECTION</string>
    <string name="touch_on_the_circle_slash_symbol_to_indicate_an_order_not_picked_up_by_closing_time">Touch on the circle slash symbol to indicate an order not picked up by closing time.</string>
    <string name="hawkeye_harvest">Hawkeye Harvest</string>
    <string name="our_records_show_your_recent_order_was_packed_but_not_picked_up_by_closing_time_and_had_to_be_put_away_please_come_to_the_food_bank_between_1pm_and_3pm_weekdays_to_order_in_person">Our records show your recent order was packed but not picked up by closing time and had to be put away. Please come to the food bank between 1PM and 3PM weekdays to order in person.</string>
    <string name="exit">Exit</string>
    <string name="your_order_is_being_packed_please_go_to_the_food_bank_now_show_the_order_number_on_the_next_screen_in_your_car_window">Your order is being packed. Please go to the food bank now. Show the order number on the next screen in your car window.</string>
    <string name="your_order_is_being_packed">Your order is being packed.</string>
    <string name="show_number">Show Number</string>
    <string name="your_order_has_been_packed_please_pull_up_to_the_food_bank_now_show_the_order_number_on_the_next_screen_in_your_car_window">Your order has been packed. Please pull up to the food bank now. Show the order number on the next screen in your car window.</string>
    <string name="ready_for_pick_up">Ready for Pick Up!</string>
    <string name="food_bank">FOOD BANK</string>
    <string name="your_order_has_been_received_and_will_be_packed_shortly_please_go_to_the_food_bank_now_to_pick_it_up">Your order has been received and will be packed shortly. Please go to the food bank now to pick it up.</string>
    <string name="done">Done !</string>
    <string name="save_successful">Save Successful</string>
    <string name="earliest_next_order_date">Earliest Next Order Date</string>
    <string name="your_order_has_been_saved_you_may_activate_this_saved_order_using_this_app_any_time_on_or_after">Your order has been saved. You may activate this saved order using this app any time on or after:</string>
    <string name="order_placed">Order Placed</string>
    <string name="your_order_has_been_placed_and_will_be_packed_shortly_please_proceed_to_the_food_bank_location_to_pick_up_show_the_order_number_on_the_next_screen_in_your_car_window_at_pickup">Your order has been placed and will be packed shortly. Please proceed to the Food Bank location to pick up. Show the order number on the next screen in your car window at pickup.</string>
    <string name="out_of_stock">Out of Stock</string>
    <string name="sorry_we_are_out_of_the_following_you_may_choose_something_else">Sorry-- We are out of the following. You may choose something else.</string>
    <string name="ok">OK</string>
    <string name="you_have_a_saved_order_your_may_look_at_and_change_your_order_now_if_you_like_the_food_bank_is_closed_now_it_is_open_to_pack_orders_from_1_3_pm_on_weekdays_would_you_like_to_update_your_order">You have a saved order. Your may look at and change your order now if you like. The food bank is closed now: it is open to pack orders from 1-3 PM on weekdays. Would you like to update your order?</string>
    <string name="work_on_my_order">Work on my order</string>
    <string name="i_will_come_back_later">I will come back later.</string>
    <string name="make_your_selections">Make your selections:</string>
    <string name="our_records_show_you_have_picked_up_this_month_s_order_already_you_may_shop_for_next_month_now_and_then_activate_your_order_between_1_and_3_pm_weekdays_next_month">Our records show you have picked up this month\'s order already. You may shop for next month now, and then activate your order between 1 and 3 PM weekdays next month.</string>
    <string name="shop">Shop</string>
    <string name="shop_for_next_month">Shop for next month</string>
    <string name="come_back_later">Come back later</string>
    <string name="you_have_a_saved_order_are_you_ready_to_pick_up_your_order_now">You have a saved order. Are you ready to pick up your order now?</string>
    <string name="check_out">Check out</string>
    <string name="shop_some_more">Shop some more</string>
    <string name="please_enter_your_account_id">Please enter your account ID:</string>
    <string name="espanol">Espanol</string>
    <string name="foodItem">Item</string>
    <string name="available">Available</string>
    <string name="are_you_ready_to_pack_the_next_order">Are you ready to pack the next order?</string>
    <string name="number_of_orders_needing_to_be_packed">Number of orders needing to be packed:</string>
    <string name="none">None</string>
    <string name="record_no_show">Record No Show</string>
    <string name="selected_of">Selected of</string>
    <string name="order_number2">Order Number</string>
    <string name="orderid">OrderID</string>
    <string name="welcome_to_hawkeye_harvest_next_day_ordering">Welcome to Hawkeye Harvest Next Day Ordering!</string>
    <string name="our_records_show_your_recent_order_was_packed_but_not_picked_up_by_closing_time_and_had_to_be_put_away_please_come_to_the_food_bank_when_it_is_open_to_order_in_person_for_this_month_please_try_this_app_again_next_month">Our records show your recent order was packed but not picked up by closing time and had to be put away. Please come to the food bank when it is open to order in person for this month. Please try this app again next month.</string>
    <string name="your_order_is_in_progress_and_will_be_brought_out_to_you_shortly">Your order is in progress and will be brought out to you shortly.</string>
    <string name="your_order_will_be_packed_for_pickup_between_and_today_please_go_to_the_food_bank_at_that_time_your_order_number_is">Your order will be packed for pickup between _ and _ today. Please go to the food bank at that time. Your order number is _</string>
    <string name="your_order_is_ready_for_pickup_please_go_to_the_food_back_now_and_tell_staff_that_you_have_come_to_pick_up_order_number">Your order is ready for pickup. Please go to the food back now and tell staff that you have come to pick up order number _</string>
    <string name="your_order_has_been_received_please_go_to_the_food_back_tomorrow_between_and_to_pick_up_your_order">Your order has been received. Please go to the food back tomorrow between _ and _ to pick up your order.</string>
    <string name="please_go_to_the_food_bank_between_and_tomorrow_to_pick_up_your_order">Please go to the food bank between _ and _ tomorrow to pick up your order.</string>
    <string-array name="categories_array">
        <item>Meat</item>
        <item>Protein</item>
        <item>Vegetables</item>
        <item>Fruits</item>
        <item>Beans</item>
        <item>Soups</item>
        <item>Processed Tomato</item>
        <item>Cereals</item>
        <item>Sides</item>
        <item>Pasta</item>
        <item>Meal Helper</item>
        <item>Extra</item>
        <item>Nonedibles</item>
        <item>Milk</item>
        <item>Eggs</item>
        <item>Jello/Pudding</item>
        <item>Dairy (except milk)</item>
        <item>Bread</item>
        <item>Sweets</item>
        <item>Fresh Produce</item>
        <item>Specials</item>
    </string-array>
</resources>
