<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/textViewOrderReceivedMessage"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/fragmentBackground"
tools:context=".VolunteerActivity">


<TextView
    android:id="@+id/textViewVolunteerSection"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:background="@color/fragmentBackground"
    android:fontFamily="@font/work_sans_medium"
    android:gravity="center"
    android:text="@string/volunteer_section"
    android:textColor="@color/logoHunterGreen"
    android:textSize="18sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toEndOf="@+id/imageViewLogoVolunteer"
    app:layout_constraintTop_toBottomOf="@+id/textViewHawkeyeHarvestVolunteer" />

<ImageView
    android:id="@+id/imageViewLogoVolunteer"
    android:layout_width="106dp"
    android:layout_height="91dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:src="@drawable/ic_hawkeye_harvest_food_bank_logo"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<TextView
    android:id="@+id/textViewHawkeyeHarvestVolunteer"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:background="@color/fragmentBackground"
    android:fontFamily="@font/goblin_one"
    android:gravity="center"
    android:text="@string/hawkeye_harvest"
    android:textColor="#0A3711"
    android:textSize="24sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toEndOf="@+id/imageViewLogoVolunteer"
    app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewconfirmPackedMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:gravity="bottom"
        android:text="@string/are_you_ready_to_pack_the_next_order"
        android:textColor="@color/plainText"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewOrderCount" />

    <Button
        android:id="@+id/buttonConfirmPacked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:onClick="onReadyButtonClicked"
        android:text="@string/ok"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.851"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewconfirmPackedMessage"
        app:layout_constraintVertical_bias="0.203" />

    <TextView
        android:id="@+id/textViewOrderCountLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/number_of_orders_needing_to_be_packed"
        android:textColor="@color/plainText"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLogoVolunteer" />

    <TextView
        android:id="@+id/textViewOrderCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/none"
        android:textColor="@color/colorPrimary"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewOrderCountLabel" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/record_no_show"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/imageButtonNoShow"
        app:layout_constraintTop_toTopOf="@+id/imageButtonNoShow" />

    <ImageButton
        android:id="@+id/imageButtonNoShow"
        android:layout_width="52dp"
        android:layout_height="51dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_no_show" />
</androidx.constraintlayout.widget.ConstraintLayout>