<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fragmentBackground"
    tools:context=".orderoffsite.MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tool_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/imageViewLogo3"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="8dp"
            android:src="@drawable/ic_hawkeye_harvest_food_bank_logo"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="4dp" />

        <TextView
            android:id="@+id/textViewOrderReadyTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:fontFamily="@font/goblin_one"
            android:gravity="center"
            android:text="@string/hawkeye_harvest"
            android:textColor="@color/logoLimeGreen"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageViewLogo3"
            app:layout_constraintTop_toBottomOf="@+id/tool_bar" />

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/textViewAlreadyPickedUpMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:text="@string/our_records_show_you_have_picked_up_this_month_s_order_already_you_may_shop_for_next_month_now_and_then_activate_your_order_between_1_and_3_pm_weekdays_next_month"
        android:textColor="@color/plainText"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tool_bar" />

    <Button
        android:id="@+id/button_shop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/shop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAlreadyPickedUpMessage" />

    <Button
        android:id="@+id/button_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/exit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_shop" />

    <TextView
        android:id="@+id/textViewShopForNextMonthLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/shop_for_next_month"
        android:textColor="@color/plainText"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/button_shop"
        app:layout_constraintTop_toTopOf="@+id/button_shop" />

    <TextView
        android:id="@+id/textViewWIllComeBackLaterLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/come_back_later"
        android:textColor="@color/plainText"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/button_exit"
        app:layout_constraintTop_toTopOf="@+id/button_exit" />


</androidx.constraintlayout.widget.ConstraintLayout>